<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/en_BTN_send1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send1"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/en_BTN_send2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/en_BTN_send2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send2"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/en_BTN_send1"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- New Button Below -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/en_BTN_send3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send3"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@+id/en_BTN_send2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- New Button Below -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/en_BTN_send4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send4"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@+id/en_BTN_send3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
